Fix overflow bug after resizing by adding scrolls

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -43,7 +43,11 @@ header {
 
 main {
   height: calc(100vh - 50px);
-  overflow: hidden;
+  overflow: scroll;
+}
+
+main::-webkit-scrollbar {
+  display: none;
 }
 
 aside {
